add cfs-coffee-arch.c and coffee-test; move enc28j60 to examples/6lbr-router/platform/stm32_node/; change webserver-lite to webserver

--- a/cpu/arm/stm32f103/Makefile.stm32f103
+++ b/cpu/arm/stm32f103/Makefile.stm32f103
@@ -8,7 +8,8 @@ CONTIKI_CPU=$(CONTIKI_CPU_ARM)/stm32f103
 CONTIKI_CPU_DIRS = . 
 
 CONTIKI_SOURCEFILES += clock.c  newlib-syscalls.c debug-uart.c util.c \
-							rtimer-arch.c stm32-id-arch.c watchdog.c stm32-eeprom.c
+							rtimer-arch.c stm32-id-arch.c watchdog.c stm32-eeprom.c \
+							cfs-coffee.c cfs-coffee-arch.c
 
 THREADS =
 
