--- a/examples/6lbr-router/Makefile
+++ b/examples/6lbr-router/Makefile
@@ -6,8 +6,8 @@ CETIC_6LBR_SMARTBRIDGE=0
 CETIC_6LBR_TRANSPARENTBRIDGE=0
 CETIC_6LBR_ROUTER=1
 
-WITH_WEBSERVER_LITE=1
-
+WITH_WEBSERVER_LITE=0
+WITH_WEBSERVER=1
 # End of user configurable section
 
 all: $(CONTIKI_PROJECT)
@@ -25,10 +25,18 @@ CFLAGS +=-DCETIC_6LBR_SMARTBRIDGE=$(CETIC_6LBR_SMARTBRIDGE) -DCETIC_6LBR_TRANSPA
 ifneq ($(WITH_WEBSERVER_LITE),0)
 WITH_WEBSERVER=0
 endif
-
+#.PHONY : force
 ifneq ($(WITH_WEBSERVER),0)
 CFLAGS += -DWEBSERVER=1
 PROJECT_SOURCEFILES += webserver.c httpd-simple.c 
+#PROJECT_SOURCEFILES += $(WEBCSOURCE)httpd-fs.c
+#FORCE=force
+#WEBDIR=$(CONTIKI)/examples/6lbr-router/apps/webserver/www/
+#WEBCSOURCE=$(CONTIKI)/examples/6lbr-router/apps/webserver/
+#$(WEBCSOURCE)httpd-fs.c: $(WEBCSOURCE)httpd-fsdata.c
+#$(WEBCSOURCE)httpd-fsdata.c : $(FORCE) $(WEBDIR)/*.*
+#	@echo Generating initial web content for full flash coffee file system
+#	$(CONTIKI)/tools/makefsdata -C -A PROGMEM -c -f 20 -d $(WEBDIR) -o $(WEBCSOURCE)httpd-fsdata.c
 endif
 
 ifneq ($(WITH_WEBSERVER_LITE),0)
@@ -50,9 +58,8 @@ endif
 
 PROJECT_SOURCEFILES += rio.c packet-filter.c sicslow-ethernet.c nvm-config.c node-info.c
 
-PROJECT_SOURCEFILES += stm32-init.c stm32-nvm.c 
+PROJECT_SOURCEFILES += stm32-init.c stm32-nvm.c enc28j60.c enc28j60-drv.c
 
 VERSION=$(shell echo $(word 3,$(shell awk '/CETIC_6LBR_VERSION/' project-conf.h)))
 
 include $(CONTIKI)/Makefile.include
-
